--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   },
   "author": "berson969",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "@koa/cors": "^5.0.0",
     "@koa/router": "^12.0.1",
-    "forever": "^4.0.3",
     "koa": "^2.15.0",
     "koa-body": "^6.0.1",
     "uuid": "^9.0.1",
-    "ws": "^8.16.0"
+    "ws": "^8.16.0",
+    "forever": "^4.0.3"
   }
 }
